- Fixing logo cut on small devices - Fixing footer in bigger screens - not finished yet.

--- a/frontend/src/app/footer/footer.component.css
+++ b/frontend/src/app/footer/footer.component.css
@@ -70,3 +70,12 @@ li a:hover {
     padding-left: 10px;
   }
 }
+@media (min-height: 1200px) {
+  .footer {
+    height: 30px;
+  }
+
+  .trademark {
+    padding: 10px 0 0;
+  }
+}
