--- a/frontend/src/app/introduction/introduction.component.css
+++ b/frontend/src/app/introduction/introduction.component.css
@@ -89,7 +89,7 @@
 }
 @media (max-width: 500px) {
   .logo {
-    height: 55px;
+    height: 65px;
     width : 275px;
   }
 
